
INCLUDES = -I$(srcdir)/include

noinst_LIBRARIES = libwxxml_snapshot.a

libwxxml_snapshot_a_SOURCES = \
                       xml.cpp xmlbin.cpp xmlbinz.cpp \
                       xmlres.cpp xmlrsall.cpp xh_bttn.cpp xh_chckb.cpp \
                       xh_chckl.cpp xh_choic.cpp xh_combo.cpp xh_dlg.cpp \
                       xh_gauge.cpp xh_html.cpp xh_listb.cpp xh_menu.cpp \
                       xh_notbk.cpp xh_panel.cpp xh_radbt.cpp xh_radbx.cpp \
                       xh_sizer.cpp xh_slidr.cpp xh_spin.cpp xh_stbmp.cpp \
                       xh_sttxt.cpp xh_text.cpp xh_toolb.cpp

