
SUBDIRS = expat

INCLUDES = -I$(srcdir)/../../include -I$(srcdir)/expat

noinst_LIBRARIES = libmy_xrc.a

libmy_xrc_a_SOURCES = \
    xh_bmp.cpp xh_bmpbt.cpp xh_bttn.cpp xh_cald.cpp xh_chckb.cpp \
    xh_chckl.cpp xh_choic.cpp xh_combo.cpp xh_dlg.cpp xh_frame.cpp \
    xh_gauge.cpp xh_html.cpp xh_listb.cpp xh_listc.cpp xh_menu.cpp \
    xh_notbk.cpp xh_panel.cpp xh_radbt.cpp xh_radbx.cpp xh_scrol.cpp \
    xh_sizer.cpp xh_slidr.cpp xh_spin.cpp xh_stbmp.cpp xh_stbox.cpp \
    xh_stlin.cpp xh_sttxt.cpp xh_text.cpp xh_toolb.cpp xh_tree.cpp \
    xh_unkwn.cpp xml.cpp xmlres.cpp xmlrsall.cpp xh_gdctl.cpp xh_scwin.cpp \
    xh_wizrd.cpp
